# faemcp

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  main.py  pyproject.toml
.claude/: settings.json
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/faemcp/: __init__.py  __main__.py  error_handling.py  main.py  server.py  template_processing.py  version_info.py
src/faemcp/prompts/: start-prompt.md
